[package]
name = "juniper-compose-macros"
description = "Macros for juniper-compose crate"
categories = []
version = "0.0.2"
authors = ["Kit Isaev <14875494+nikis05@users.noreply.github.com>"]
license = "MIT"
edition = "2018"
documentation = "https://docs.rs/juniper-compose"
repository = "https://github.com/nikis05/juniper-compose"
keywords = []

[lib]
proc-macro = true

[dependencies]
heck = "0.4.0"
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full"] }
