[package]
name = "juniper-compose"
description = "Merge multiple Juniper object definitions into one"
categories = ["web-programming"]
version = "0.0.3"
authors = ["Kit Isaev <14875494+nikis05@users.noreply.github.com>"]
license = "MIT"
edition = "2018"
documentation = "https://docs.rs/juniper-compose"
repository = "https://github.com/nikis05/juniper-compose"
keywords = ["juniper", "compose", "merge"]

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
juniper-compose-macros = { version = "0.0.3", path = "../juniper-compose-macros" }
